# Tasks

./: .clang-format  .gitignore  AddBoost.cmake  AddGoogleTests.cmake  CMakeLists.txt  ComposeFileBySourceGroup.cmake  FindAllSourceFiles.cmake  README.md  TargetBuild.cmake  build.sh
C++/: .clang-format
C++/tests/: AddSuitTests.cmake  AddUnitTests.cmake
Cpp/: .clang-format  AddBoost.cmake  AddGoogleTests.cmake  CMakeLists.txt  build.bat  build.sh  conf.bat  vars.bat
Cpp/cmake/: AddGoogleTests.cmake  AddSuitTests.cmake
Cpp/src/OpenSources/LetCode/: support.h
Cpp/src/OpenSources/LetCode/Easy/: string_to_int.cpp
Cpp/src/OpenSources/LetCode/Medium/: combinations.cpp  maximum-subarray.cpp  permutations.cpp  restore-ip-addresses.cpp
Cpp/tests/suit-tests/OpenSources/LetCode/Easy/: Palindrome-Number.cpp
Cpp/tests/suit-tests/OpenSources/LetCode/Hard/: median-of-two-sorted-arrays.cpp  substring-with-concatenation-of-all-words.md
Cpp/tests/suit-tests/OpenSources/LetCode/Medium/: divide-two-integers.cpp  divide-two-integers.md  maximum-length-of-a-concatenated-string-with-unique-characters.md  rotate-image.cpp
Cpp/tests/unit-tests/OpenSources/LetCode/: template-2.cpp
Rust/: README.md
Rust/Education/: notes.md
Rust/Education/OOP/src/: main.rs
Rust/Education/branches/src/: main.rs
Rust/Education/collections/src/: hash_maps.rs  main.rs  strings.rs  vectors.rs
Rust/Education/data_types/src/: main.rs
Rust/Education/enums/src/: main.rs
Rust/Education/functions/src/: main.rs
Rust/Education/gessing_game/src/: main.rs
Rust/Education/loops/: Cargo.toml
Rust/Education/loops/src/: main.rs
Rust/Education/slices/src/: main (2).rs
Rust/Education/structures/src/: main.rs
Rust/Education/testing/src/: lib.rs
Rust/Education/testing/tests/: block-1.rs
Rust/Education/traits/src/: main.rs
Rust/Education/variables/src/: main.rs
Rust/Tasks/degrees/: Cargo.toml
Rust/Tasks/degrees/src/: main.rs
Rust/Tasks/fibonacci_digits/: Cargo.toml
Rust/Tasks/fibonacci_digits/src/: main.rs
Rust/Tasks/massive_manipulations/: Cargo.toml
Rust/Tasks/massive_manipulations/src/: main.rs  (+2 more)
Rust/Wiki/: introduction.md  librarium.md
Rust/Wiki/librarium/: closures.md  macrosses.md  multithreading.md  smart pointers.md
Rust/let_code/: Cargo.toml
Rust/let_code/src/: context.rs  issues.rs  tasks.rs
src/TasksLib/: default.cpp  default.hpp  export.hpp
tests/: CMakeLists.txt
(+54 files in other folders)
